--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 	},
 	"dependencies": {
 		"discord.js": "11.1.0",
+		"dotenv": "^16.0.3",
 		"isomorphic-unfetch": "^3.1.0",
 		"request": "2.81.0"
 	}
